preventing line wrapped with parameter labels

--- a/tallon/filter-menu.css
+++ b/tallon/filter-menu.css
@@ -96,6 +96,7 @@
 /* ~~~~~~~~~~~~~~~~ */
 
 .param-label {
+	white-space: nowrap;
 	grid-column: 1;
 	text-align: right;
 	padding: 4px;
